010_dynamic_blocks_conditionals/solution/main.tf
terraform {
  required_version = ">= 1.7.0"

  required_providers {
    google = {
      source  = "hashicorp/google"
      version = "~> 5.0"
    }
  }
}

provider "google" {
  project = "your-gcp-project-id" # TODO: replace with your project ID
  region  = "us-central1"
}

variable "allowed_ports" {
  type = list(object({
    protocol = string
    ports    = list(string)
  }))
  default = [
    { protocol = "tcp", ports = ["22"] },
    { protocol = "tcp", ports = ["80", "443"] },
  ]
}

variable "environment" {
  type    = string
  default = "dev"
}

resource "google_project_service" "compute" {
  project            = "your-gcp-project-id" # TODO: replace with your project ID
  service            = "compute.googleapis.com"
  disable_on_destroy = false
}

resource "google_compute_network" "this" {
  name                    = "dynamic-blocks-network"
  auto_create_subnetworks = false

  depends_on = [google_project_service.compute]
}

resource "google_compute_subnetwork" "this" {
  name          = "dynamic-blocks-subnet"
  ip_cidr_range = "10.0.1.0/24"
  region        = "us-central1"
  network       = google_compute_network.this.id
}

resource "google_compute_firewall" "this" {
  name    = "dynamic-blocks-allow"
  network = google_compute_network.this.id

  dynamic "allow" {
    for_each = var.allowed_ports
    content {
      protocol = allow.value.protocol
      ports    = allow.value.ports
    }
  }

  source_ranges = var.environment == "prod" ? ["35.235.240.0/20"] : ["0.0.0.0/0"]
}
